@@ -2,8 +2,7 @@ name: 'Domain Path'
 description: 'Allows separate path aliases per domain.'
 type: module
 package: Domain
-# version: VERSION
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - path
   - domain
