@@ -1,0 +1,7 @@
+services:
+  domain_path_pathauto.generator:
+    class: Drupal\domain_path_pathauto\DomainPathautoGenerator
+    arguments: ['@config.factory', '@module_handler', '@token', '@pathauto.alias_cleaner', '@pathauto.alias_storage_helper', '@domain_path_pathauto.alias_uniquifier', '@pathauto.verbose_messenger', '@string_translation', '@token.entity_mapper', '@entity_type.manager', '@plugin.manager.alias_type']
+  domain_path_pathauto.alias_uniquifier:
+    class: Drupal\domain_path_pathauto\DomainAliasUniquifier
+    arguments: ['@config.factory', '@pathauto.alias_storage_helper','@module_handler', '@router.route_provider', '@path_alias.manager']
